Revise allocator per patch in QPID-1458; Fixes QPID-1458

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@734251 13f79535-47bb-0310-9956-ffa450edef68